--- a/Kotlin/协程.md
+++ b/Kotlin/协程.md
@@ -287,6 +287,8 @@ println("main: Now I can quit.")
 
 > withContext和suspendCancellableCoroutine支持取消的方式不一样，withContext是创建了一个子协程（Coroutine），因为创建新协程就会创建新的Job并关联父级Job，所以withContext支持取消，而suspendCancellableCoroutine是通过包装Continuation来支持取消
 
+> 调用Job的取消，和在挂起函数内部主动throw `CancellableContinuation` 或者Continuation.resumeWithException(CancellableContinuation())不一样：Job的取消即使try-catch住了挂起点的取消异常，Job的状态仍然已经改变，不会再执行任何会受到取消影响的挂起函数，比如delay、suspendCancellableCoroutine、withContext(Dispathcers.IO)等，而不受取消影响的suspendCoroutine、withContext(NonCancellable)仍然可以执行；而挂起函数内部主动抛出的异常，被try-catch后不会影响协程Job的状态，所以仍然可以执行后续挂起函数。
+
 ### 异常处理
 在了解取消协程时，看到了使用`suspendCancellableCoroutine()`的挂起函数在取消时抛出`CancellationException`，已经涉及到了协程的异常，这里我们来了解协程对异常的处理方式。
 
