--- a/Kotlin/类与对象.md
+++ b/Kotlin/类与对象.md
@@ -226,6 +226,13 @@ this::prop 是 KProperty 类型的反射对象
 4. 提供委托 provideDelegate
 。。。后续细看
 
+
+by lazy {} 为什么lazy函数返回的Lazy类型没有声明`operator fun getValue(...)`，因为使用了扩展函数来声明
+```
+@kotlin.internal.InlineOnly
+public inline operator fun <T> Lazy<T>.getValue(thisRef: Any?, property: KProperty<*>): T = value
+```
+
 ## 数据类
 ```
 data class User(val name: String, val age: Int)
