补充嵌套滑动场景、布局流程的笔记

--- a/Android/View/滑动冲突.md
+++ b/Android/View/滑动冲突.md
@@ -381,7 +381,9 @@ onNestedFling
 * https://chris.banes.dev/carry-on-scrolling/
 * https://juejin.cn/post/6844903761060577294
 
-> NestedScrollView在onInterceptTouchEvent中，通过getNestedScrollAxes判断了处于嵌套滚动，避免拦截子view的事件，但RecyclerlView只实现了NestedScrollingChild，而没有实现NestedScrollingParent，所以RecyclerView作为嵌套滚动的父级仍有问题，例如ViewPager2基于RecyclerView，所以作为嵌套滚动的父级需要额外处理。
+> NestedScrollView在onInterceptTouchEvent中，通过getNestedScrollAxes判断了处于嵌套滚动，避免拦截子view的事件，但RecyclerlView只实现了NestedScrollingChild，而没有实现NestedScrollingParent，所以RecyclerView作为嵌套滚动的父级仍有问题，例如ViewPager2基于RecyclerView，所以作为嵌套滚动的父级需要额外处理。可参考官方的代码 NestedScrollableHost
+
+> ViewPager2内部为纵向RecyclerView、外部为BottomSheetBehavior的情况，想要纵向嵌套滚动：BottomSheetBehavior会查找最近的子级`isNestedScrollingEnabled`为true的view作为嵌套滑动的child（可查看源码`nestedScrollingChildRef`字段），因为我们想要外层的BottomSheetBehavior和内层预设列表RecyclerView之间嵌套滑动，首先要设置ViewPager2内的RecyclerView的`isNestedScrollingEnabled`为false，屏蔽中间层。然后还需要让BottomSheetBehavior查找到ViewPager2当前页面的预设列表RecyclerView，所以我们在ViewPager2切换页面时，设置当前页面的RecyclerView的`isNestedScrollingEnabled`为true，其他页面的RecyclerView`isNestedScrollingEnabled`为false，这样就会让BottomSheetBehavior以当前页面的RecyclerView为嵌套滑动的child。另外，因为还需要触发BottomSheetBehavior的`onLayoutChild`方法才会执行查找嵌套滑动子级，否则嵌套滑动的child在ViewPager2切换页面时没有更新为当前页面，所以还需要调用CoordinatorLayout的requestLayout()。
 
 ## CoordinatorLayout和behavior
 嵌套滑动本质上是view之间相互通信、协调。CoordinatorLayout是NestedScrollingParent的子类，并且还介入了布局流程、事件分发等，相当于把嵌套滑动的协调思想，扩展到了布局流程、事件分发等。CoordinatorLayout作为嵌套滑动的parent、布局流程、事件分发的中间协调者，可以解耦CoordinatorLayout的各个child之间的协调操作。这部分我们在单独的文章中介绍。
