--- a/Android/优化/内存优化.md
+++ b/Android/优化/内存优化.md
@@ -72,6 +72,8 @@ MAT的下载路径：https://www.eclipse.org/mat/downloads.php
 * Shallow Size:  对象本身占用内存的大小，不包含其引用的对象。
 * Retained Size:  对象本身占用的内存大小 + 对象直接或间接引用的对象本身占用的内存大小
 
+dump两次的结果可以比较，得出变化的内存对象，可以用于了解新增的对象。
+
 ### LeakCanary
 `LeakCanary` 检测Android中 `Activity` 和 `Fragment` 内存泄漏的便捷工具（内部使用的heap分析工具shark或haha库）
 
