--- a/Android/优化/存储优化.md
+++ b/Android/优化/存储优化.md
@@ -32,3 +32,18 @@ SharedPreference仅适用于存储简单的数据
 https://mp.weixin.qq.com/s/GCznwCtjJ2XUszyMcbNz8Q
 https://mp.weixin.qq.com/s/AhYECT3HVyn1ikB0YQ-UVg
 http://blog.codinglabs.org/articles/theory-of-mysql-index.html
+
+##
+MemoryFile、SharedMemory、MappedByteBuffer
+
+OKIO
+
+
+再来探讨文件为什么会损坏，我们可以从应用程序、文件系统和磁盘三个角度来审视这个问题。
+
+● 应用程序。大部分的I/O方法都不是原子操作，文件的跨进程或者多线程写入、使用一个已经关闭的文件描述符fd来操作文件，它们都有可能导致数据被覆盖或者删除。事实上，大部分的文件损坏都是因为应用程序代码设计考虑不当导致的，并不是文件系统或者磁盘的问题。
+
+● 文件系统。虽说内核崩溃或者系统突然断电都有可能导致文件系统损坏，不过文件系统也做了很多的保护措施。例如system分区保证只读不可写，增加异常检查和恢复机制，ext4的fsck、f2fs的fsck.f2fs和checkpoint机制等。
+在文件系统这一层，更多是因为断电而导致的写入丢失。为了提升I/O性能，文件系统把数据写入到Page Cache中，然后等待合适的时机才会真正的写入磁盘。当然我们也可以通过fsync、msync这些接口强制写入磁盘，在下一其我会详细介绍直接I/O和缓存I/O。
+
+● 磁盘。手机上使用的闪存是电子式的存储设备，所以在资料传输过程可能会发生电子遗失等现象导致数据错误。不过闪存也会使用ECC、多级编码等多种方式增加数据的可靠性，一般来说出现这种情况的可能性也比较小。
