--- a/Python/命名空间与类.md
+++ b/Python/命名空间与类.md
@@ -1,7 +1,37 @@
-Python的命令空间例子：存放内置函数的集合（包含 abs() 这样的函数，和内建的异常等）；模块中的全局名称；函数调用中的局部名称
+Python的命名空间例子：存放内置函数的集合（包含 abs() 这样的函数，和内建的异常等）；模块中的全局名称；函数调用中的局部名称
 
 从某种意义上说，对象的属性集合也是一种命名空间的形式。 关于命名空间的重要一点是，不同命名空间中的名称之间绝对没有关系；例如，两个不同的模块都可以定义一个 maximize 函数而不会产生混淆 --- 模块的用户必须在其前面加上模块名称。
 
-在不同时刻创建的命名空间拥有不同的生存期。包含内置名称的命名空间是在 Python 解释器启动时创建的，永远不会被删除。模块的全局命名空间在模块定义被读入时创建；通常，模块命名空间也会持续到解释器退出。被解释器的顶层调用执行的语句，从一个脚本文件读取或交互式地读取，被认为是 __main__ 模块调用的一部分，因此它们拥有自己的全局命名空间。
+在不同时刻创建的命名空间拥有不同的生存期。包含内置名称的命名空间是在 Python 解释器启动时创建的，永远不会被删除。模块的全局命名空间在模块定义被读入时创建；通常，模块命名空间也会持续到解释器退出。被解释器的顶层调用执行的语句，从脚本文件读取或交互式读取的，由解释器顶层调用执行的语句是 `__main__` 模块调用的一部分，也拥有自己的全局命名空间。内置名称实际上也在模块里，即 builtins （内置对象，比如调用 abs() 函数时，实际上调用的是 builtins.abs() 函数）。
+
+----
+
+Python 的特殊名 `__main__` 用于两个重要的构造：
+1. 程序的顶层环境的名称，可用表达式 `__name__` == `__main__` 来检查；以及
+2. Python 包中的文件 `__main__.py`。
+
+当一个 Python 模块或包被导入时，`__name__` 被设为模块的名称——通常为 Python 文件本身的名称去掉 .py 后缀：
+```
+import configparser
+// 打印 configparser.__name__ 为 'configparser'
+```
+如果文件是包的一部分，则 `__name__` 还将包括父包的路径：
+```
+from concurrent.futures import process
+打印 process.__name__ 为 'concurrent.futures.process'
+```
+
+而若模块是在顶层代码环境中执行的，则其 `__name__` 被设为字符串 `__main__`。“顶层代码”是指由用户指定的最先开始运行的那一个 Python 模块。之所以它是“顶层”，是因为它将导入程序所需的所有其它模块。有时“顶层代码”被称为应用程序的 入口点。
+
+模块通过检查自己的 `__name__` 可发现自己是否运行于顶层环境，使一些代码仅当模块不是被导入语句初始化的时候才执行：
+```
+if __name__ == '__main__':
+    # 将在模块不是由于 import 语句被初始化的情况下执行。
+    ...
+```
+
+----
+
+函数的局部命名空间在函数被调用时被创建，并在函数返回或抛出未在函数内被处理的异常时，被删除。（实际上，用“遗忘”来描述实际发生的情况会更好一些。）当然，每次递归调用都有自己的局部命名空间。
 
 一个 作用域 是一个命名空间可直接访问的 Python 程序的文本区域。 这里的 “可直接访问” 意味着对名称的非限定引用会尝试在命名空间中查找名称。
