--- a/Python/模块.md
+++ b/Python/模块.md
@@ -1,3 +1,4 @@
+# 模块
 任何一个 .py 文件被称为模块，使用模块方式如下：
 
 fun.py
@@ -13,6 +14,13 @@ print(fun.getNumber())
 ```
 
 这样就能在test.py中使用fun.py中定义的函数
+
+模块包含可执行语句及函数定义。这些语句用于初始化模块，且仅在 import 语句 第一次 遇到模块名时执行。(文件作为脚本运行时，也会执行这些语句。)
+
+每个模块都有自己的私有命名空间，它会被用作模块中定义的所有函数的全局命名空间。 因此，模块作者可以在模块内使用全局变量而不必担心与用户的全局变量发生意外冲突。 另一方面，如果你知道要怎么做就可以通过与引用模块函数一样的标记法 modname.itemname 来访问一个模块的全局变量。
+
+模块可以导入其他模块。 根据惯例可以将所有 import 语句都放在模块（或者也可以说是脚本）的开头但这并非强制要求。 如果被放置于一个模块的最高层级，则被导入的模块名称会被添加到该模块的全局命名空间。
+
 
 ## 模块文件系统目录检索顺序
 向 Python 说 import ... 的时候，它要去寻找你所指定的文件，那个文件应该是 import 语句后面引用的名称，再加上 .py 构成的名字的文件。Python 会按照以下顺序去寻找：
@@ -36,7 +44,7 @@ from fun import getNumber
 ```
 此时就不用再写fun.getNumber()了，可以直接写getNumber()
 
-注意，如果当前目录中并没有 fun.py 这个文件，那么，fun 会被当作目录名再被尝试一次 —— 如果当前目录内，有个叫做 fun 的目录（或称文件夹）且该目录下同时要存在一个 __init__.py 文件（通常为空文件，用于标识本目录形成一个包含多个模块的 包（packages），它们处在一个独立的 命名空间（namespace）），那么，from fun import * 的作用就是把 fun 这个文件夹中的所有 .py 文件全部导入……
+注意，如果当前目录中并没有 fun.py 这个文件，那么，fun 会被当作目录名再被尝试一次 —— 如果当前目录内，有个叫做 fun 的目录（或称文件夹）且该目录下同时要存在一个 `__init__.py` 文件（通常为空文件，用于标识本目录形成一个包含多个模块的 包（packages），它们处在一个独立的 命名空间（namespace）），那么，from fun import * 的作用就是把 fun 这个文件夹中的所有 .py 文件全部导入
 
 如果我们想要导入 foo 这个目录中的 bar.py 这个模块文件，那么，可以这么写：
 
@@ -61,3 +69,86 @@ f.getNumber()
 
 ## 模块中不一定只有函数
 一个模块文件中，不一定只包含函数；它也可以包含函数之外的可执行代码。只不过，在 import 语句执行的时候，模块中的非函数部分的可执行代码，只执行一次。模块中的变量也可以引用
+
+# 包
+包是通过使用“带点号模块名”来构造 Python 模块命名空间的一种方式。 例如，模块名 A.B 表示名为 A 的包中名为 B 的子模块。 就像使用模块可以让不同模块的作者不必担心彼此的全局变量名一样，使用带点号模块名也可以让 NumPy 或 Pillow 等多模块包的作者也不必担心彼此的模块名冲突。
+
+假设要为统一处理声音文件与声音数据设计一个模块集（“包”）。声音文件的格式很多（通常以扩展名来识别，例如：.wav，.aiff，.au），因此，为了不同文件格式之间的转换，需要创建和维护一个不断增长的模块集合。为了实现对声音数据的不同处理（例如，混声、添加回声、均衡器功能、创造人工立体声效果），还要编写无穷无尽的模块流。下面这个分级文件树展示了这个包的架构：
+```
+sound/                          最高层级的包
+      __init__.py               初始化 sound 包
+      formats/                  用于文件格式转换的子包
+              __init__.py
+              wavread.py
+              wavwrite.py
+              aiffread.py
+              aiffwrite.py
+              auread.py
+              auwrite.py
+              ...
+      effects/                  用于音效的子包
+              __init__.py
+              echo.py
+              surround.py
+              reverse.py
+              ...
+      filters/                  用于过滤器的子包
+              __init__.py
+              equalizer.py
+              vocoder.py
+              karaoke.py
+              ...
+```
+导入包时，Python 搜索 sys.path 里的目录，查找包的子目录。
+
+需要有 `__init__.py` 文件才能让 Python 将包含该文件的目录当作包来处理（除非使用 namespace package，这是一个相对高级的特性）。 这可以防止重名的目录如 string 在无意中屏蔽后继出现在模块搜索路径中的有效模块。 在最简单的情况下，`__init__.py` 可以只是一个空文件，但它也可以执行包的初始化代码或设置 `__all__` 变量，
+
+还可以从包中导入单个模块，例如：
+```
+import sound.effects.echo
+
+// 使用时必须通过其全名来引用：sound.effects.echo.echofilter(input, output, delay=0.7, atten=4)
+```
+
+另一种导入子模块的方法是 ：
+```
+from sound.effects import echo
+```
+这也会加载子模块 echo，并使其不必加包前缀，因此可按如下方式使用:
+```
+echo.echofilter(input, output, delay=0.7, atten=4)
+```
+
+Import 语句的另一种变体是直接导入所需的函数或变量：
+```
+from sound.effects.echo import echofilter
+```
+同样，这将加载子模块 echo，但这使其函数 echofilter() 直接可用:
+```
+echofilter(input, output, delay=0.7, atten=4)
+```
+
+
+使用 from sound.effects import * 时会发生什么？你可能希望它会查找并导入包的所有子模块，但事实并非如此。
+
+import 语句使用如下惯例：如果包的 `__init__.py` 代码定义了列表 `__all__`，运行 from package import * 时，它就是被导入的模块名列表。发布包的新版本时，包的作者应更新此列表。如果包的作者认为没有必要在包中执行导入 * 操作，也可以不提供此列表。例如，`sound/effects/__init__.py` 文件可以包含以下代码：
+```
+__all__ = ["echo", "surround", "reverse"]
+```
+这意味着 from sound.effects import * 将导入 sound.effects 包的三个命名子模块。
+
+注意子模块可能会受到本地定义名称的影响：
+```
+__all__ = [
+    "echo",      # 指向 'echo.py' 文件
+    "surround",  # 指向 'surround.py' 文件
+    "reverse",   # !!! 现在指向 'reverse' 函数 !!!
+]
+
+def reverse(msg: str):  # <-- 此名称将覆盖 'reverse.py' 子模块
+    return msg[::-1]    #     针对 'from sound.effects import *' 的情况
+```
+
+如果包或模块中没有定义 `__all__` ，那么 from package import * 的行为会有以下规则：
+1. 对于模块：会导入所有不以下划线（ _ ）开头的名称，包括变量、函数、类等
+2. 对于包：如果包的 `__init__.py` 中没有定义 `__all__`，from package import * 不会导入任何子模块，只会导入 `__init__.py` 中定义的不以下划线开头的名称
