--- a/Android/优化/内存优化.md
+++ b/Android/优化/内存优化.md
@@ -9,7 +9,8 @@ https://juejin.im/post/6844904099998089230#heading-187
 3. 图片或者其他问题导致占用内存过大
 
 内存不足或者抖动，容易频繁GC，造成卡顿，还可能触发低内存杀进程
-## 内存分析工具
+
+## 内存数据介绍
 ||英文全称|分类|区别|
 |--|--|--|--|
 |USS|Unique Set Size|物理内存|进程独占的内存|
@@ -17,6 +18,44 @@ https://juejin.im/post/6844904099998089230#heading-187
 |RSS|Resident Set Size|物理内存|RSS=USS+共享库|
 |VSS|Virtual Set Size|虚拟内存|VSS=RSS+未分配实际物理内存|
 
+| 指标名称 | 获取方式 |
+|---|---|
+|物理内存 |   Debug.MemoryInfo.getTotalPss()|
+|Java使用内存 |  Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory()|
+|显存 |         Debug.MemoryInfo.getMemoryStat("summary.graphics")|
+|虚拟内存 |       /proc/进程pid/status|
+|Java内存使用率 | Java使用内存 / Runtime.getRuntime().maxMemory()|
+|Java物理内存使用 | Debug.MemoryInfo.dalvikPss|
+|Native物理内存使用 | Debug.MemoryInfo.nativePss|
+
+内存计数中的类别如下：
+* Java：从 Java 或 Kotlin 代码分配的对象的内存。
+* Native：从 C 或 C++ 代码分配的对象的内存。即使您的应用中不使用 C++，您也可能会看到此处使用了一些原生内存，因为即使您编写的代码采用 Java 或 Kotlin 语言，Android 框架仍使用原生内存代表您处理各种任务，如处理图像资源和其他图形。
+* Graphics：图形缓冲区队列为向屏幕显示像素（包括 GL 表面、GL 纹理等等）所使用的内存。（请注意，这是与 CPU 共享的内存，不是 GPU 专用内存。）
+* Stack：您的应用中的原生堆栈和 Java 堆栈使用的内存。这通常与您的应用运行多少线程有关。
+* Code：您的应用用于处理代码和资源（如 dex 字节码、经过优化或编译的 dex 代码、.so 库和字体）的内存。
+* Others：您的应用使用的系统不确定如何分类的内存。
+* Allocated：您的应用分配的 Java/Kotlin 对象数。此数字没有计入 C 或 C++ 中分配的对象。
+
+### Android代码中获取内存信息
+* Debug类
+* ActivityManager.getProcessMemoryInfo
+* Runtime
+* Stressapptest 内存压力测试
+```
+long javaMax = runtime.maxMemory(); // 例如很多机型是256MB，设置largeHeap则可能是512MB
+long javaTotal = runtime.totalMemory();
+long javaUsed = javaTotal - runtime.freeMemory(); // Java //内存使用超过最大限制的 85%
+float proportion = (float) javaUsed / javaMax;
+
+// 关系： used + free = total；  total + unlocated = max
+```
+> JVM OOM针对的就是javaMax，也就是整个Java虚拟机进程使用内存，包括了堆、栈、方法区等，只不过大多数情况重点关注堆区。
+
+* onTrimMemory 的level参数，例如TRIM_MEMORY_UI_HIDDEN，是应用内所有UI组件都隐藏时，这时我们可以释放UI相关的资源，比如缓存，还有其他各种值对应不同的情况
+
+
+## 内存分析工具
 ### Linux自带命令
 top等
 
@@ -24,11 +63,24 @@ top等
 获取当前OOM的限制阈值，可以通过命令或者代码的方式：
 ```
 //命令行
-adb shell getprop dalvik.vm.heapgrowthlimit
+adb shell getprop dalvik.vm.heapgrowthlimit 正常情况
+adb shell getprop dalvik.vm.heapsize 如果设置了largeHeap则以这个属性为准
+adb shell getprop dalvik.vm.heapstartsize 初始大小
 
 //代码中
 activityManager.getMemoryClass()
+activityManager.getLargeMemoryClass()
+activityManager.isLowRamDevice()
+
+activityManager.getMemoryInfo
 ```
+
+OOM场景：
+1. 进程虚拟内存不足：32位进程的虚拟地址空间为4G，所以尽量使用64位（这个问题较小，只需要看so库等C/C++相关代码和库，Java字节码无关）
+2. Java堆内存不足：Java堆内存泄漏或者使用过多未释放导致
+3. 连续内存不足：问题发生较少，比如内存碎片化时，想在堆中创建一个大数组
+4. FD数量超过系统限制：文件描述符使用数量太多，没有及时关闭，在/proc/pid/limits文件中可以看到限制数量。/proc/pid/fd/文件中可以看到当前进程正在使用的fd。
+5. 线程数超过系统限制：系统对进程创建的线程数量限制，可以通过/proc/sys/kernel/threads-max查看
 
 ### LowMemoryKiller
 当内存较低时，系统会主动杀死进程回收内存，进程的优先级较低时更容易被杀。系统会给进程打分，分越高则进程优先级越低。
@@ -46,6 +98,71 @@ cat /proc/pid/oom_adj
 [官方文档可查看详细说明](https://developer.android.google.cn/studio/profile/investigate-ram?hl=zh-cn#TrackAllocations)
 
 Heap Alloc 是申请的或者说分配的虚拟内存，不一定全部实际使用，比如创建数组就分配了虚拟内存，但是对数组的各个位置赋值才实际使用了物理内存。而PSS和Private Dirty是实际使用的物理内存。各种mmap是映射的代码占的内存大小。
+
+以一个使用dumpsys meminfo的例子来进一步了解：
+```
+** MEMINFO in pid 23976 [com.xxx.xxx] **
+                   Pss  Private  Private  SwapPss      Rss     Heap     Heap     Heap
+                 Total    Dirty    Clean    Dirty    Total     Size    Alloc     Free
+                ------   ------   ------   ------   ------   ------   ------   ------
+  Native Heap  1361498  1361476        4       36  1363800  1466020  1427870    38149
+  Dalvik Heap    83124    83004        0        9    89964   118475    93899    24576
+ Dalvik Other    22752    19560        0        0    27380                           
+        Stack    14236    14236        0        0    14256                           
+       Ashmem     1660      156        0        0     4104                           
+      Gfx dev    84784    84784        0        0    84784                           
+    Other dev      578      108      424        0     1176                           
+     .so mmap   129802    11136   114016        0   178276                           
+    .jar mmap     1312        0      176        0    35208                           
+    .apk mmap     7595      488     1788        0    27088                           
+    .ttf mmap     1951        0      232        0    12648                           
+    .dex mmap   212482    67352   144144        0   216400                           
+    .oat mmap      433        0       88        0    14900                           
+    .art mmap    26482    25980      236        9    42100                           
+   Other mmap     1705       36     1612        0     2696                           
+   EGL mtrack   138964   138964        0        0   138964                           
+    GL mtrack     1536     1536        0        0     1536                           
+      Unknown     9796     9796        0        0    10212                           
+        TOTAL  2100744  1818612   262720       54  2265492  1584495  1521769    62725
+ 
+ App Summary
+                       Pss(KB)                        Rss(KB)
+                        ------                         ------
+           Java Heap:   109220                         132064
+         Native Heap:  1361476                        1363800
+                Code:   339436                         490956
+               Stack:    14236                          14256
+            Graphics:   225284                         225284
+       Private Other:    31680
+              System:    19412
+             Unknown:                                   39132
+ 
+           TOTAL PSS:  2100744            TOTAL RSS:  2265492       TOTAL SWAP PSS:       54
+ 
+ Objects
+               Views:     2639         ViewRootImpl:        2
+         AppContexts:       14           Activities:        4
+              Assets:       43        AssetManagers:        0
+       Local Binders:      138        Proxy Binders:       70
+       Parcel memory:      105         Parcel count:      397
+    Death Recipients:        8      OpenSSL Sockets:        2
+            WebViews:        0
+
+```
+* `Java Heap` = Dalvik Heap Private Dirty + .art mmap Private (Clean 和 Dirty) = 83004 + 25980 + 236 = 109220
+* `Native Heap` = Native Private Dirty = 1361476
+* `Code` = .so mmap Private (Clean 和 Dirty) + .jar mmap Private (Clean 和 Dirty) + .apk mmap Private (Clean 和 Dirty) + .ttf mmap Private (Clean 和 Dirty) + .dex mmap Private (Clean 和 Dirty) + .oat mmap Private (Clean 和 Dirty)
+* `Stack` = Stack Private Dirty
+* `Graphics` = GL mtrack Private (Clean 和 Dirty) + EGL mtrack Private (Clean 和 Dirty)
+* `Private other` = TOTAL Private (Clean 和 Dirty) - Java Heap - Native Heap - Code - Stack - Graphic
+* `System` = TOTAL - TOTAL Private (Clean 和 Dirty)
+
+> 可能有细微的误差，因为各个数据获取时可能有很小的时差
+
+Private Dirty     进程本身使用的内存总数，包含了进程主动申请的以及修改的继承自Zygote的内存。其实Private Dirty表示了该进程私有的，不跟Disk数据一致的内存段。例如堆（heap），栈（stack），bss段。
+Private clean     进程独自使用的so和dex。Clean内存的好处是在内存紧张时，可以释放物理内存。因为是clean的，所以不需要写回到disk，只需要下次读取该内存（导致缺页错误）时再从disk读入。
+
+**dumpsys meminfo打印的Objects部分，还可以查看View、Activity等对象数量，可以用于内存泄漏判断**
 
 ### procrank
 可以输出详细的VSS/RSS/PSS/USS内存指标
@@ -73,6 +190,14 @@ MAT的下载路径：https://www.eclipse.org/mat/downloads.php
 * Retained Size:  对象本身占用的内存大小 + 对象直接或间接引用的对象本身占用的内存大小
 
 dump两次的结果可以比较，得出变化的内存对象，可以用于了解新增的对象。
+
+”Biggest Objects“ 功能，即其Retained Size大于某一个阈值的单个Java对象或者类，”Biggest Top-Level Dominator Classes“ 功能，即某一Java类，虽然其单个对象小，但是其所有的Java对象实例的总Retained Size和超过某一个阈值
+
+
+eclipse提供的各种工具
+https://help.eclipse.org/latest/index.jsp?topic=%2Forg.eclipse.mat.ui.help%2Ftasks%2Fcomparingdata.html
+
+jhat
 
 ### LeakCanary
 `LeakCanary` 检测Android中 `Activity` 和 `Fragment` 内存泄漏的便捷工具（内部使用的heap分析工具shark或haha库）
@@ -112,20 +237,6 @@ http://hg.openjdk.java.net/jdk6/jdk6/jdk/raw-file/tip/src/share/demo/jvmti/hprof
 |Graphics||pixel data |||
 |Private Data|runtime metadata||||
 
-
-### Android代码中获取内存信息
-* Debug类
-* ActivityManager.getProcessMemoryInfo
-* runtime
-```
-long javaMax = runtime.maxMemory();
-long javaTotal = runtime.totalMemory();
-long javaUsed = javaTotal - runtime.freeMemory(); 4 // Java //内存使用超过最大限制的 85%
-float proportion = (float) javaUsed / javaMax;
-```
-
-* onTrimMemory 的level参数，例如TRIM_MEMORY_UI_HIDDEN，是应用内所有UI组件都隐藏时，这时我们可以释放UI相关的资源，比如缓存，还有其他各种值对应不同的情况
-
 ## 内存监控
 一般在发生OOM或者一定阈值时，通过`Debug.dumpHprofData("path")`获取内存快照，然后传回服务器，开发人员再根据内存快照分析。但要注意两个点，一是dump过程会暂停所有线程，容易造成卡顿和ANR，常用做法为在后台才执行或者fork后在子进程执行dump；二是快照文件会很大，需要做裁剪（比如去掉String的数组和Bitmap的像素信息）和压缩，但dump后会先占用大量存储空间，更高效的就是在dump时hook系统调用`open`和`write`，在写入过程就过去掉了要裁剪的数据。可以参考[快手KOOM](https://github.com/KwaiAppTeam/KOOM)和[字节的tailor](https://github.com/bytedance/tailor)以及微信的Matrix。
 
@@ -139,6 +250,10 @@ float proportion = (float) javaUsed / javaMax;
 
 ## 资源泄漏监控
 fd监控：轮询 /proc/pid/fd/ 获取当前进程的fd数量。或者做一些native hook监控open等函数？
+
+## 线程数量监控
+/proc/pid/status
+调用Thread.getAllStackTraces() 获取当前所有线程的信息，包括线程名、调用栈及状态等
 
 ### Native内存泄漏监控
 参考：[字节Raphael](https://juejin.cn/post/6953430618726203399)
