更新进程文件描述符相关笔记

--- a/C与Linux/操作系统导论.md
+++ b/C与Linux/操作系统导论.md
@@ -150,6 +150,8 @@ Linux内核维护了3个数据结构：
 2. 系统级的打开文件描述符表
 3. 文件系统的i-node表
 
+![](./引用图片/进程文件描述符数据结构.webp)
+
 每个进程在Linux内核中都有一个`task_struct`结构体来维护进程相关的信息，称为进程描述符(Process Descriptor)，而在操作系统理论中称为进程控制块 (PCB,Process Control Block)。task_struct中有一个指针(`struct files_struct *files`)指向`files_struct`结构体，称为文件描述符表，其中每个表项包含一个指向已打开的文件的指针。
 
 `task_struct`数据结构：
