更新c/c++和链接笔记

--- a/C与Linux/编译链接过程.md
+++ b/C与Linux/编译链接过程.md
@@ -1,5 +1,5 @@
 ## 1.编译链接流程(Linux平台为例)
-1. 预处理，生成预编译文件（.文件）：
+1. 预处理，生成预编译文件（.i文件）：
     gcc –E hello.c –o hello.i
 
 2. 编译，生成汇编代码（.s文件）：
@@ -14,6 +14,8 @@
 以上流程，可以跨越执行，例如直接汇编C文件：gcc -c hello.c -o hello.o也可以，这就会自动完成前面的预处理和编译和当前的汇编。  
 且可以同时处理多个文件：gcc -c a.c b.c ，则会产生a.o和b.o。gcc a.c b.c则直接完成所有流程将a和b文件链接成可执行文件。
 但是链接时必须有且仅有一个目标文件内有main函数，例如gcc a.o b.o，必须有一个含main函数。
+
+> 编译是单个文件，链接才是多个文件
 
 ## 2.静态链接库、动态链接库
 * 静态库的代码在编译过程中已经被载入可执行程序
@@ -45,11 +47,8 @@ gcc a.c b.a -L. -o a.out
 * 编译动态链接库：
 ```
 gcc -fPIC -shared hello1.c hello2.c -o libhello.so
-//等于如下
-//gcc -c -fPIC hello1.c hello2.c
-//gcc -shared hello1.o hello2.o -o libhello.so
 ```
--fPIC表示位置独立代码，指示编译程序生成的代码要适合共享库的内容这样的代码能够根据载入内存的位置计算内部地址。实际上只是告诉GCC产生的代码不要包含对函数和变量具体内存位置的引用，因为现在还无法知道使用该消息代码的应用程序会将它链接到哪一段内存地址空间。
+-fPIC表示位置独立代码，PIC是 Position Independent Code 的缩写，指示编译程序生成的代码要适合共享库的内容这样的代码能够根据载入内存的位置计算内部地址。实际上只是告诉GCC产生的代码不要包含对函数和变量具体内存位置的引用，因为现在还无法知道使用该消息代码的应用程序会将它链接到哪一段内存地址空间。
 
 
 * 链接动态链接库
@@ -83,6 +82,26 @@ char *dlerror();
 ```
 
 ## 3.静态链接原理
+为什么需要链接？在纸带打孔编写程序的时代，如果程序被修改，比如插入一条指令，那么就需要人工重新计算每个子程序或跳转的目标地址，这个重新计算的过程（被叫做**重定位**）十分繁琐并且容易出错。如果有多条纸带程序，可能会有纸带间的程序跳转，重定位的过程在这种多模块的情况更为严重。
+
+所以发明了汇编语言，除了可以使用可读的符号（symbol）表示指令，还可以使用符号来标记位置，比如一个除法子程序叫做“divide”，“divide”就表示它的起始地址，方便记忆和使用，并且其他指令增删导致“divide”的目标地址发生变化，汇编器在汇编程序时会重新计算“divide”符号的地址，然后把所有引用“divide”的指令修正到正确的地址，这个过程不需要人工参与。
+
+并且在软件规模逐渐庞大后，人们需要考虑将不同功能的代码按照功能或性质，分别形成不同的功能模块和层次，比如C语言中最小的单位是变量和函数，若干变量和函数组成一个模块，存放在一个C源文件中，这些源文件按照目录结构来组织。这些模块最终如何组合形成一个单一的程序？最常见的属于静态语言的C/C++模块之间的通信方式有两种，一种是模块间的函数调用，另一种是模块间的变量访问。函数和便利访问需要知道目标函数和目标变量的地址，所以本质都是模块间符号的引用，模块的组合过程就是**链接**。
+
+链接的主要内容就是把各个模块之间相互引用的部分都处理好，过程包括地址和空间分配、符号决议（也成为符号绑定）、重定位
+
+比如main.c中调用了func.c中的foo()函数，由于每个模块都是单独编译的，编译时main.c时并不知道foo函数的地址，所以此时并不会确定调用foo的指令的目标地址，等到链接时由连接器去修正这些指令的目标地址，当func.c模块被重新编译时，foo的函数地址可能变化，那么只需要重新链接，根据引用的符号foo，自动去相应的func.c模块查找foo的地址，将main.c模块所有引用到foo的指令重新修正，这就是静态链接的基本过程。
+
+对于变量，假如在文件A中有一个全局变量var，在文件B中访问这个变量：
+```
+movl $0x2a, var
+// 相当于 var = 42
+```
+此时汇编文件B，生成机器指令：
+```
+C705 000000 2a000000
+```
+汇编文件B时并不知道变量的目标地址，所以会先设为0，等待连接器执行时修正地址。假如A和B链接后，变量var的地址确定为0x1000，那么在链接时，链接器会遍历所有模块，查找所有引用到var的指令，并修正为0x1000。
 
 ## 4.动态链接原理
 
