--- a/Flutter/状态管理.md
+++ b/Flutter/状态管理.md
@@ -3,8 +3,8 @@
 
 ## 状态管理和通信常用方式
 * 回调
-* valueNotifier
-* InheritedWidget 自上而下 也有观察作用
+* valueNotifier、ChangeNotifier
+* InheritedWidget 自上而下 也有观察作用 InheritedModel InheritedNotifier
 * NotificationListener 自下而上
 * Provider
 * Redux：核心角色的作用为Store存储自定义的State类，并持有Reducer作为处理Action的函数。对应到Flutter中，StoreProvider作为上层Widget，持有Store及其中的State，也持有Reducer；使用StoreProvider.of可以dispatch定义的Action，StoreProvider收到Action，会调用Reducer并得到新的State，然后会通知（用到StreamBuilder）StoreConnector重建内部Widget。
@@ -12,93 +12,121 @@
 * ...
 
 ## InheritedWidget分析
-InheritedWidget可以用于在Widget树中向下共享数据。
 
-首先定义一个继承InheritedWidget的ShareDataWidget类，它提供了data数据：
+### 用法
+InheritedWidget可以用于在Widget树中向下共享数据和触发依赖它的widget重建。
+
+首先定义一个继承`InheritedWidget`的`CounterInheritedWidget`类，它提供了count数据：
 ```
-class ShareDataWidget extends InheritedWidget {
-  String data;
+class CounterInheritedWidget extends InheritedWidget {
+  final int count;
 
-  @override
-  bool updateShouldNotify(covariant ShareDataWidget oldWidget) {
-    return oldWidget.data != data;
+  const CounterInheritedWidget({
+    super.key,
+    required this.count,
+    required super.child,
+  });
+
+  // 定义一个便捷方法，方便子树中的widget依赖共享数据
+  static CounterInheritedWidget of(BuildContext context) {
+    return context
+        .dependOnInheritedWidgetOfExactType<CounterInheritedWidget>()!;
   }
 
-  ShareDataWidget({@required this.data, Widget child}) : super(child: child);
-}
-```
-然后，定义一个_TestWidget，它可以获取ShareDataWidget中的数据，通过BuildContext的dependOnInheritedWidgetOfExactType方法，可以获取到widget树中上级中的ShareDataWidget，然后可以拿到data：
-```
-class _TestWidget extends StatefulWidget {
-  @override
-  __TestWidgetState createState() => new __TestWidgetState();
-}
-
-class __TestWidgetState extends State<_TestWidget> {
-  @override
-  Widget build(BuildContext context) {
-    //使用InheritedWidget中的共享数据
-    return Text(context
-        .dependOnInheritedWidgetOfExactType<ShareDataWidget>()
-        .data
-        .toString());
+  static CounterInheritedWidget get(BuildContext context) {
+    return context.getInheritedWidgetOfExactType<CounterInheritedWidget>()!;
   }
 
   @override
-  void didChangeDependencies() {
-    super.didChangeDependencies();
+  bool updateShouldNotify(covariant CounterInheritedWidget oldWidget) {
+    return count != oldWidget.count;
   }
 }
 ```
-再创建一个MyWidget来使用它们，MyWidget内部把_TestWidget设为ShareDataWidget的后代Widget，点击button时修改数据，刷新界面：
+然后，定义一个CounterDisplayWidget，它依赖了`CounterInheritedWidget`中的数据：
+```
+class CounterDisplayWidget extends StatefulWidget {
+  const CounterDisplayWidget({super.key});
+
+  @override
+  CounterDisplayWidgetState createState() => CounterDisplayWidgetState();
+}
+
+class CounterDisplayWidgetState extends State<CounterDisplayWidget> {
+  @override
+  Widget build(BuildContext context) {`
+    final count = CounterInheritedWidget.of(context).count;
+    return Text(count.toString());
+  }
+}
+```
+再创建一个MyWidget来使用它们，MyWidget内部把`CounterDisplayWidget`设为`CounterInheritedWidget`的后代Widget，点击button时修改数据，刷新界面：
 ```
 class MyWidget extends StatefulWidget {
+  const MyWidget({super.key});
+
   @override
-  _MyState createState() {
-    return _MyState();
+  MyState createState() {
+    return MyState();
   }
 }
 
-class _MyState extends State<MyWidget> {
-  int data = 0;
+class MyState extends State<MyWidget> {
+  int count = 0;
 
   @override
   Widget build(BuildContext context) {
-    return ShareDataWidget(
-      data: data,
-      child: Center(
-        child: RaisedButton(
-          child: _TestWidget(),
-          onPressed: () => setState(() {
-            data += 1;
-          }),
+    return CounterInheritedWidget(
+      count: count,
+      child: Scaffold(
+        appBar: AppBar(
+          backgroundColor: Theme.of(context).colorScheme.inversePrimary,
+          title: const Text('计数器'),
+        ),
+        body: Center(
+          child: Column(
+            mainAxisAlignment: MainAxisAlignment.center,
+            children: <Widget>[
+              const Text('点击按钮的次数:'),
+              CounterDisplayWidget()
+            ],
+          ),
+        ),
+        floatingActionButton: FloatingActionButton(
+          onPressed:
+              () => setState(() {
+                count++;
+              }),
+          tooltip: '增加',
+          child: const Icon(Icons.add),
         ),
       ),
     );
   }
 }
 ```
+
 最后，把MyWidget放在Flutter界面中：
 ```
 void main() => runApp(MyApp());
 
 class MyApp extends StatelessWidget {
+  const MyApp({super.key});
+
   @override
   Widget build(BuildContext context) {
-    return MaterialApp(
-      home: MyWidget()
-    );
+    return MaterialApp(home: MyWidget());
   }
 }
 ```
-以上就可以做到通过点击按钮，调用_MyState的setState方法修改数据，刷新界面，_TestWidget会显示新的数据。下面简单分析一下数据共享的流程：
+以上就可以做到通过点击按钮，调用MyState的setState方法修改数据，刷新界面，`CounterDisplayWidget`会显示新的数据。下面简单分析一下数据共享的流程：
 
 ### dependOnInheritedWidgetOfExactType
-在_TestWidget中，通过调用`BuildContext`（实现类为`Element`）的`dependOnInheritedWidgetOfExactType`方法：
+在CounterDisplayWidget中，通过调用`BuildContext`（实现类为`Element`）的`dependOnInheritedWidgetOfExactType`方法：
 ```
 @override
 T dependOnInheritedWidgetOfExactType<T extends InheritedWidget>({Object aspect}) {
-  final InheritedElement ancestor = _inheritedWidgets == null ? null : _inheritedWidgets[T];
+  final InheritedElement? ancestor = _inheritedElements?[T];
   if (ancestor != null) {
     return dependOnInheritedElement(ancestor, aspect: aspect) as T;
   }
@@ -106,11 +134,12 @@ T dependOnInheritedWidgetOfExactType<T extends InheritedWidget>({Object aspect})
   return null;
 }
 ```
-这里将会找到祖先元素中的InheritedElement，调用dependOnInheritedElement：
+> `InheritedWidget`会创建`InheritedElement`，而`Element`在`mount`时会调用`updateInheritance`方法，`InheritedElement`重写该方法，会把当前`InheritedWidget`实现类运行时类型作为key，把自己（即`InheritedElement`）作为value，保存到`_inheritedWidgets`中，并且`_inheritedWidgets`实例为所有Element共享。**所以在这里可以通过`_inheritedElements`查找到指定`InheritedWidget`对应的`InheritedElement`**
+
+这里将会找到祖先元素中的`InheritedElement`，调用`dependOnInheritedElement`：
 ```
 @override
 InheritedWidget dependOnInheritedElement(InheritedElement ancestor, { Object aspect }) {
-  assert(ancestor != null);
   _dependencies ??= HashSet<InheritedElement>();
   _dependencies.add(ancestor);//1
   ancestor.updateDependencies(this, aspect);//2
@@ -128,31 +157,38 @@ InheritedWidget dependOnInheritedElement(InheritedElement ancestor, { Object asp
 2. BuildOwner.buildScope
 3. 根Element.rebuild
 
-会执行到子元素InheritedElement的`update`方法（也就是父类ProxyElement的`update`方法）：
+会执行到子元素InheritedElement的`update`方法，首先会调用`InheritedWidget`的updateShouldNotify方法，判断是否需要更新，如果需要则会调用父类ProxyElement的`update`方法：
 ```
-@override
-void update(ProxyWidget newWidget) {
-  final ProxyWidget oldWidget = widget;
-  super.update(newWidget);
-  updated(oldWidget);//1
-  _dirty = true;
-  rebuild();//2
-}
-```
-
-第一是执行到`InheritedElement.updated`方法，这里就会调用：
-```
+// InheritedElement
 @override
 void updated(InheritedWidget oldWidget) {
-  if (widget.updateShouldNotify(oldWidget))
+  if ((widget as InheritedWidget).updateShouldNotify(oldWidget)) {
     super.updated(oldWidget);
+  }
+}
+
+@override
+void notifyClients(InheritedWidget oldWidget) {
+  for (final Element dependent in _dependents.keys) {
+    notifyDependent(oldWidget, dependent);
+  }
+}
+
+@protected
+void notifyDependent(covariant InheritedWidget oldWidget, Element dependent) {
+  dependent.didChangeDependencies();
+}
+
+// ProxyElement
+@protected
+void updated(covariant ProxyWidget oldWidget) {
+  // 调用notifyClients，实现在子类InheritedElement中
+  notifyClients(oldWidget);
 }
 ```
-将调用我们在`InheritedWidget`重写的`updateShouldNotify`方法，用于判断是否要通知关联的子元素。
+`ProxyElement`的`update`方法调用`InheritedElement`的`notifyClients`方法，就会遍历所有依赖InhheritedWidget的Widget对应的Element执行rebuild，从而导致widget重建。
 
-如果需要通知，`super.updated`将找到之前关联依赖的子元素，调用子元素的`didChangeDependencies`方法，引发`markNeedsBuild`；对于`StatefulWidget`对应的`StatefulElement`类型，重写了`didChangeDependencies`方法，子元素就会把`_didChangeDependencies`改为true。
-
-然后在第二步，执行`rebuild`时，最终执行到子元素的`performRebuild`方法，对于这里是`StatefulElement`：
+对于`StatefulWidget`对应的`StatefulElement`类型，重写了`didChangeDependencies`方法，子元素就会把`_didChangeDependencies`改为true。并且`StatefulElement`重写了`performRebuild()`，会调用`State`的`didChangeDependencies`方法。：
 ```
 @override
 void performRebuild() {
@@ -163,14 +199,264 @@ void performRebuild() {
   super.performRebuild();
 }
 ```
-这里就会调用`State`的`didChangeDependencies`方法。
 
 注意点：
-1. setState所在的State的Widget必须是ShareDataWidget或者它的父级，才会引发ShareDataWidget及子级的刷新
+1. setState所在的State的返回的Widget必须包含`InheritedWidget`，才可以引发依赖`InheritedWidget`的子级刷新，因为需要触发`InheritedWidget`的rebuild。
 2. build的情况，不一定会调用`State`的`didChangeDependencies`，但是调用`didChangeDependencies`，肯定伴随着build。
-3. StatefulWidget配合dependOnInheritedWidgetOfExactType才能同时有获取数据和数据改变后回调的效果
-4. 把_TestWidget改为StatelessWidget，也能刷新界面，但就不能使用didChangeDependencies回调
-5. getElementForInheritedWidgetOfExactType、findAncestorWidgetOfExactType等方法也能获取数据，但是不能建立依赖关系，即使是StatefulWidget也不能收到didChangeDependencies回调
-6. 一般不需要重写didChangeDependencies，除非需要在依赖更新时做一些操作
+3. getElementForInheritedWidgetOfExactType、findAncestorWidgetOfExactType等方法也能获取共享数据，但是不能建立依赖关系，即使是StatefulWidget也不能收到didChangeDependencies回调
+4. StatefulWidget配合dependOnInheritedWidgetOfExactType才能同时有获取数据和数据改变后回调的效果，`StatefulWidget`用于触发build，dependOnInheritedWidgetOfExactType用于和`InheritedWidget`建立依赖关系
+5. 把CounterDisplayWidget改为StatelessWidget，也能刷新界面，但就不能使用didChangeDependencies回调，一般不需要重写didChangeDependencies，除非需要在依赖更新时做一些操作
+6. **使用`dependOnInheritedWidgetOfExactType`建立依赖关系，所在widget范围应该尽可能小，以减少rebuild范围，比如上面的demo就把显示数字的widget单独抽取为`CounterDisplayWidget`类**
 
-> InheritedWidget是一种基本的状态管理、共享方式，其他的状态管理方式可能是基于InheritedWidget，也可能是重新创造的，待进一步了解
+> InheritedWidget是一种基本的状态管理、共享方式，其他的状态管理方式一般会基于InheritedWidget实现。
+
+## InheritedNotifier
+InheitedWidget并不是StatefulWidget，而要让child widget更新，又需要触发InheitedWidget rebuild，所以会把InheitedWidget实现类的对象放到StatefulWidget中，触发StatefulWidget的rebuild，从而触发InheitedWidget rebuild。但其实我们想rebuild的只是InheitedWidget和依赖它的widget并不想影响StatefulWidget内的其他不需要更新的widget。
+
+`InheritedNotifier`是`InheitedWidget`的子类，它会持有一个`Listenable`对象，一般使用`ChangeNotifier`等子类，通过`Listenable`对象建立数据共享和通知机制，调用`Listenable`的`notifyListeners()`时，会导致`InheritedNotifier`的Element也就是`_InheritedNotifierElement`执行`markNeedsBuild()`，但触发`_InheritedNotifierElement`的build也只是直接返回`InheritedNotifier`的child对象，并不会像`StatefulWidget`那样重新执行`State`的`build`方法。所以会比直接使用`InheritedWidget`性能更好。（其实就相当于自定义了`InheritedWidget`的Element，并且通过持有的`Listenable`对象通知变化触发Element的build，但会直接返回child，不会像`StatefulWidget`的那样重新执行State.build函数）
+
+
+下面看看用法：
+```
+/// 定义一个[ChangeNotifier]子类，用来维护计数状态，并提供增加计数的方法。
+class CounterNotifier extends ChangeNotifier {
+  int _count = 0;
+
+  int get count => _count;
+
+  // 更新数据，并调用通知方法
+  void increment() {
+    _count++;
+    notifyListeners();
+  }
+}
+
+/// 定义一个继承自 InheritedNotifier 的 CounterProvider 类，持有CounterNotifier
+class CounterProvider extends InheritedNotifier<CounterNotifier> {
+  const CounterProvider({
+    super.key,
+    required CounterNotifier notifier,
+    required super.child,
+  }) : super(notifier: notifier);
+
+  // 依赖InheritedNotifier，获取notifier
+  static CounterNotifier of(BuildContext context) {
+    return context
+        .dependOnInheritedWidgetOfExactType<CounterProvider>()!
+        .notifier!;
+  }
+
+  // 获取InheritedNotifier，不依赖
+  static CounterNotifier get(BuildContext context) {
+    return context
+        .getInheritedWidgetOfExactType<CounterProvider>()!
+        .notifier!;
+  }
+}
+
+// 点击按钮，用于增加计数
+class _MyButton extends StatelessWidget {
+  @override
+  Widget build(BuildContext context) {
+    // 获取 CounterProvider 中的 notifier，并不依赖，因为按钮不需要根据数据更新
+    final counter = CounterProvider.get(context);
+
+    return FloatingActionButton(
+      onPressed: () => counter.increment(),
+      tooltip: '增加',
+      child: const Icon(Icons.add),
+    );
+  }
+}
+
+// 显示当前计数
+class _MyText extends StatelessWidget {
+  @override
+  Widget build(BuildContext context) {
+    // 依赖 CounterProvider，它持有的CounterNotifier更新时，将触发 _MyText 的重建，从而更新显示
+    final counter = CounterProvider.of(context);
+
+    return Text(
+      '${counter.count}',
+      style: Theme.of(context).textTheme.headlineMedium,
+    );
+  }
+}
+
+/// 页面 Widget，显示计数和按钮
+class CounterHomePage extends StatelessWidget {
+  const CounterHomePage({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return Scaffold(
+      appBar: AppBar(
+        backgroundColor: Theme.of(context).colorScheme.inversePrimary,
+        title: const Text('InheritedNotifier 计数器'),
+      ),
+      body: Center(
+        child: Column(
+          mainAxisAlignment: MainAxisAlignment.center,
+          children: <Widget>[
+            const Text('点击按钮的次数:'),
+            _MyText(),
+          ],
+        ),
+      ),
+      floatingActionButton: _MyButton(),
+    );
+  }
+}
+
+// 使用以上组件构建应用
+class MyApp extends StatelessWidget {
+  const MyApp({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return MaterialApp(
+      title: 'InheritedNotifier Counter',
+      theme: ThemeData(
+        colorScheme: ColorScheme.fromSeed(seedColor: Colors.blue),
+        useMaterial3: true,
+      ),
+      // 创建 CounterProvider，持有 CounterNotifier，将 CounterHomePage 作为子 Widget
+      home: CounterProvider(
+        notifier: CounterNotifier(),
+        child: const CounterHomePage(),
+      ),
+    );
+  }
+}
+
+void main() {
+  runApp(const MyApp());
+}
+```
+可以发现，使用`InheritedNotifier`可以比`InheritedWidget`做到更精细的控制更新范围，毕竟`InheritedNotifier`继承了`InheritedWidget`，并且自定义了Element和利用了`Listenable`通知机制。不再需要使用`StatefulWidget`并触发rebuild。
+
+> `InheritedNotifier`内自定义的Element监听到`Listenable`的变化通知，会调用 markNeedsBuild() 标记为“脏”状态，然后在下一帧的构建周期中统一处理。这样可以在短时间内`Listenable`多次通知更新的情况下，避免频繁的重复构建，提高性能。也更符合Flutter框架设计思想。
+
+
+## Provider
+Provider是一个常用并且理解起来比较简单的状态管理库，开发者可以创建`Provider`、`FutureProvider`、`ChangeNotifierProvider`等类型的Provider，但都会继承`InheritedProvider`，`InheritedProvider`是Provider中的核心类，用于提供数据。然后可以使用`Consumer`、`Selector`等类型的Widget，或者直接使用`Provider.of`（`Consumer`和`Selector`内部也会使用`Provider.of`）来监听Provider的数据变化，从而实现状态管理；Provider也提供了一些BuildContext上的扩展方法，可以调用`context.read()`、`context.watch()`、`context.select()`等方法来获取Provider的数据。
+
+`InheritedProvider`是一个自定义的`SingleChildStatelessWidget`类的子类，传入它的参数（比如create函数等）都会放到delegate中，并且会把child widget放到`_InheritedProviderScope`（`InheritedWidget`的子类）中。使用`Provider.of`获取值，就会找到`_InheritedProviderScope`对应的`_InheritedProviderScopeElement`，`_InheritedProviderScopeElement`的value就会从delegate中获取。
+
+`Provider.of`方法默认会启动监听，调用`context.dependOnInheritedWidgetOfExactType`依赖`_InheritedProviderScope`，例如使用`ChangeNotifierProvider`，持有的`ChangeNotifier`通知更新时，就会触发`_InheritedProviderScopeElement`的`markNeedsNotifyDependents()`方法调用，通过build调用`notifyClients`更新监听`ChangeNotifier`的子widget。
+
+> MultiProvider继承了Nested，可以把传入的`List<SingleChildWidget>`作为嵌套的Widget，如果传入的`List<SingleChildWidget>`中的Provider有child属性，会被忽略，因为MultiProvider自身就需要设置child widget，传入给MultiProvider的Provider仅用于数据共享。
+
+使用Provider的计数器demo：
+```
+class CounterNotifier extends ChangeNotifier {
+  int _count = 0;
+
+  int get count => _count;
+
+  void increment() {
+    _count++;
+    notifyListeners();
+  }
+}
+
+class MyApp extends StatelessWidget {
+  const MyApp({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return MaterialApp(
+      title: 'InheritedNotifier Counter',
+      theme: ThemeData(
+        colorScheme: ColorScheme.fromSeed(seedColor: Colors.blue),
+        useMaterial3: true,
+      ),
+      home: ChangeNotifierProvider<CounterNotifier>(
+        create: (_) => CounterNotifier(),
+        child: const CounterHomePage(),
+      ),
+    );
+  }
+}
+
+class CounterHomePage extends StatelessWidget {
+  const CounterHomePage({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return Scaffold(
+      appBar: AppBar(
+        backgroundColor: Theme.of(context).colorScheme.inversePrimary,
+        title: const Text('Provider 计数器'),
+      ),
+      body: Center(
+        child: Column(
+          mainAxisAlignment: MainAxisAlignment.center,
+          children: <Widget>[const Text('点击按钮的次数:'), CounterDisplayWidget()],
+        ),
+      ),
+      floatingActionButton: MyButton(),
+    );
+  }
+}
+
+// 显示计数，单独抽取为 Widget，因为使用 Provider.of 依赖ChangeNotifierProvider，将重建范围缩小到这个 Wdiget 内
+class CounterDisplayWidget extends StatelessWidget {
+  const CounterDisplayWidget({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    // 使用 Provider.of 依赖并获取计数器状态
+    final counter = Provider.of<CounterNotifier>(context);
+    return Text('${counter.count}');
+  }
+}
+
+// 使用 Provider.of 时传入 listen 为false，因为按钮只修改状态，但不需要监听状态变化，这样可以避免触发不需要的 rebuild。
+class MyButton extends StatelessWidget {
+  const MyButton({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    final counter = Provider.of<CounterNotifier>(context, listen: false);
+    return FloatingActionButton(
+      onPressed: () => counter.increment(),
+      tooltip: '增加',
+      child: const Icon(Icons.add),
+    );
+  }
+}
+
+void main() {
+  runApp(const MyApp());
+}
+```
+看起来和使用`InheritedNotifier`的demo差不多，一样需要通过抽取 widget，但每次想控制更新范围时，都需要自定义widget就有点麻烦，Provider库给提供了`Consumer`，可以使用它来简化：
+```
+class CounterHomePage extends StatelessWidget {
+  const CounterHomePage({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return Scaffold(
+      appBar: AppBar(
+        backgroundColor: Theme.of(context).colorScheme.inversePrimary,
+        title: const Text('Provider 计数器'),
+      ),
+      body: Center(
+        child: Column(
+          mainAxisAlignment: MainAxisAlignment.center,
+          children: <Widget>[
+            const Text('点击按钮的次数:'),
+            Consumer<CounterNotifier>(
+              builder: (_, counter, _) => Text('${counter.count}'),
+            ),
+          ],
+        ),
+      ),
+      floatingActionButton: MyButton(),
+    );
+  }
+}
+```
+相比上一个例子，这里使用了Consumer来监听CounterNotifier的变化，并没有抽取为`CounterDisplayWidget`，数据更新时只会重新调用Consumer的builder方法，不会重新构建整个Widget树。
