更新Flutter状态管理和key的笔记

--- a/Flutter/状态管理.md
+++ b/Flutter/状态管理.md
@@ -54,7 +54,7 @@ class CounterDisplayWidget extends StatefulWidget {
 
 class CounterDisplayWidgetState extends State<CounterDisplayWidget> {
   @override
-  Widget build(BuildContext context) {`
+  Widget build(BuildContext context) {
     final count = CounterInheritedWidget.of(context).count;
     return Text(count.toString());
   }
@@ -126,7 +126,7 @@ class MyApp extends StatelessWidget {
 ```
 @override
 T dependOnInheritedWidgetOfExactType<T extends InheritedWidget>({Object aspect}) {
-  final InheritedElement? ancestor = _inheritedElements?[T];
+  final InheritedElement? ancestor = _inheritedElements?[T]; // 从_inheritedElements中查找
   if (ancestor != null) {
     return dependOnInheritedElement(ancestor, aspect: aspect) as T;
   }
@@ -134,28 +134,40 @@ T dependOnInheritedWidgetOfExactType<T extends InheritedWidget>({Object aspect})
   return null;
 }
 ```
-> `InheritedWidget`会创建`InheritedElement`，而`Element`在`mount`时会调用`updateInheritance`方法，`InheritedElement`重写该方法，会把当前`InheritedWidget`实现类运行时类型作为key，把自己（即`InheritedElement`）作为value，保存到`_inheritedWidgets`中，并且`_inheritedWidgets`实例为所有Element共享。**所以在这里可以通过`_inheritedElements`查找到指定`InheritedWidget`对应的`InheritedElement`**
 
-这里将会找到祖先元素中的`InheritedElement`，调用`dependOnInheritedElement`：
 ```
 @override
-InheritedWidget dependOnInheritedElement(InheritedElement ancestor, { Object aspect }) {
-  _dependencies ??= HashSet<InheritedElement>();
-  _dependencies.add(ancestor);//1
-  ancestor.updateDependencies(this, aspect);//2
-  return ancestor.widget;
+void _updateInheritance() {
+  final PersistentHashMap<Type, InheritedElement> incomingWidgets =
+      _parent?._inheritedElements ?? const PersistentHashMap<Type, InheritedElement>.empty();
+  _inheritedElements = incomingWidgets.put(widget.runtimeType, this);
 }
 ```
-1. 这里把`InheritedElement`添加到当前元素的`_dependencies`中
+
+> `InheritedWidget`会创建`InheritedElement`，而`Element`在`mount`时会调用`_updateInheritance`方法，`InheritedElement`重写该方法，会把当前`InheritedWidget`实现类运行时类型作为key，把自己（即`InheritedElement`）作为value，保存到`_inheritedElements`中，并且`_inheritedElements`实例为所有Element共享（`_updateInheritance`会找到祖先元素中的`_inheritedElements`，为空才创建新的map，所以`_inheritedElements`实例为所有Element共享。）。**所以在`dependOnInheritedWidgetOfExactType`方法可以通过`_inheritedElements`查找到指定`InheritedWidget`对应的`InheritedElement`**
+
+`dependOnInheritedWidgetOfExactType`中找到祖先元素中的`InheritedElement`后，调用`dependOnInheritedElement`方法建立关联：
+```
+@override
+InheritedWidget dependOnInheritedElement(InheritedElement ancestor, { Object? aspect }) {
+  _dependencies ??= HashSet<InheritedElement>();
+  _dependencies!.add(ancestor);
+  ancestor.updateDependencies(this, aspect);
+  return ancestor.widget as InheritedWidget;
+}
+```
+1. 这里把依赖的`InheritedElement`添加到当前元素的`_dependencies`中
 2. 也把当前元素传给了`InheritedElement`
 
-也就是完成了`InheritedElement`和当前元素的关联
+也就是完成了`InheritedElement`和当前元素的关联，相互持有
 
 ### updateShouldNotify
 在`MyWidget`中点击按钮，会调用`State`的`setState`方法，引发重绘：
 1. WidgetsBinding.drawFrame
 2. BuildOwner.buildScope
-3. 根Element.rebuild
+3. BuildScope._flushDirtyElements
+4. StatefulElement.rebuild-->performRebuild
+5. InheritedElement.update
 
 会执行到子元素InheritedElement的`update`方法，首先会调用`InheritedWidget`的updateShouldNotify方法，判断是否需要更新，如果需要则会调用父类ProxyElement的`update`方法：
 ```
@@ -185,11 +197,22 @@ void updated(covariant ProxyWidget oldWidget) {
   // 调用notifyClients，实现在子类InheritedElement中
   notifyClients(oldWidget);
 }
-```
-`ProxyElement`的`update`方法调用`InheritedElement`的`notifyClients`方法，就会遍历所有依赖InhheritedWidget的Widget对应的Element执行rebuild，从而导致widget重建。
 
-对于`StatefulWidget`对应的`StatefulElement`类型，重写了`didChangeDependencies`方法，子元素就会把`_didChangeDependencies`改为true。并且`StatefulElement`重写了`performRebuild()`，会调用`State`的`didChangeDependencies`方法。：
+// Element
+void didChangeDependencies() {
+  markNeedsBuild();
+}
 ```
+`ProxyElement`的`update`方法调用`InheritedElement`的`notifyClients`方法，就会遍历所有依赖InhheritedWidget的Widget对应的Element执行`markNeedsBuild()`，从而导致widget重建。
+
+对于`StatefulWidget`对应的`StatefulElement`类型，重写了`didChangeDependencies`方法，除了执行父类Element的`markNeedsBuild()`，还会把`_didChangeDependencies`改为true。并且`StatefulElement`重写了`performRebuild()`，会调用`State`的`didChangeDependencies`方法，此时会判断`_didChangeDependencies`变量。：
+```
+@override
+void didChangeDependencies() {
+  super.didChangeDependencies();
+  _didChangeDependencies = true;
+}
+
 @override
 void performRebuild() {
   if (_didChangeDependencies) {
@@ -211,10 +234,9 @@ void performRebuild() {
 > InheritedWidget是一种基本的状态管理、共享方式，其他的状态管理方式一般会基于InheritedWidget实现。
 
 ## InheritedNotifier
-InheitedWidget并不是StatefulWidget，而要让child widget更新，又需要触发InheitedWidget rebuild，所以会把InheitedWidget实现类的对象放到StatefulWidget中，触发StatefulWidget的rebuild，从而触发InheitedWidget rebuild。但其实我们想rebuild的只是InheitedWidget和依赖它的widget并不想影响StatefulWidget内的其他不需要更新的widget。
+`StatefulWidget`在调用`setState`后触发rebuild widget，引发内部的`InheritedElement`调用update，从而调用rebuild依赖的`InheritedWidget`的所有widget。但这个过程需要依赖`StatefulWidget`触发rebuild，也就会导致`StatefulWidget`内其他和`InheritedWidget`无关的widget也会被rebuild，但这是没有必要的。
 
-`InheritedNotifier`是`InheitedWidget`的子类，它会持有一个`Listenable`对象，一般使用`ChangeNotifier`等子类，通过`Listenable`对象建立数据共享和通知机制，调用`Listenable`的`notifyListeners()`时，会导致`InheritedNotifier`的Element也就是`_InheritedNotifierElement`执行`markNeedsBuild()`，但触发`_InheritedNotifierElement`的build也只是直接返回`InheritedNotifier`的child对象，并不会像`StatefulWidget`那样重新执行`State`的`build`方法。所以会比直接使用`InheritedWidget`性能更好。（其实就相当于自定义了`InheritedWidget`的Element，并且通过持有的`Listenable`对象通知变化触发Element的build，但会直接返回child，不会像`StatefulWidget`的那样重新执行State.build函数）
-
+Flutter还提供了`InheritedNotifier`，可以优化这个问题，我们先看使用方式，再分析原理。
 
 下面看看用法：
 ```
@@ -337,6 +359,13 @@ void main() {
 
 > `InheritedNotifier`内自定义的Element监听到`Listenable`的变化通知，会调用 markNeedsBuild() 标记为“脏”状态，然后在下一帧的构建周期中统一处理。这样可以在短时间内`Listenable`多次通知更新的情况下，避免频繁的重复构建，提高性能。也更符合Flutter框架设计思想。
 
+**总结一下`InheritedNotifier`的原理：**
+`InheritedNotifier`是`InheritedWidget`的子类，使用者需要给它传入一个`Listenable`对象，一般使用`ChangeNotifier`等子类。widget A 通过`getInheritedWidgetOfExactType`获取到`InheritedNotifier`然后修改`Listenable`对象，
+`InheritedNotifier`会监听传入的`Listenable`对象，外部调用`Listenable`的`notifyListeners()`时，`InheritedNotifier`监听到变化就会让它的对应的Element也就是`_InheritedNotifierElement`执行`markNeedsBuild()`，但触发`_InheritedNotifierElement`的build只会直接返回`InheritedNotifier`原本持有的child（Widget）对象，并不会像`StatefulWidget`那样rebuild全部child widget，并且会调用`notifyClients`更新依赖`InheritedNotifier`的Widget。
+
+比如widget B 通过`dependOnInheritedWidgetOfExactType`依赖`InheritedNotifier`，就可以并根据`InheritedNotifier`的`Listenable`对象更新UI。
+
+`InheritedNotifier`通过`Listenable`对象建立数据共享和通知机制，可以精准rebuild关联的widget，不影响无关的widget，所以会比直接使用`InheritedWidget`性能更好。（其实就相当于自定义了`InheritedWidget`的Element，通过持有的`Listenable`对象通知变化触发此Element的build，重写的build只rebuild依赖关联的widget，并直接返回原本持有的child widget，不会像`StatefulWidget`的那样重新执行State.build函数rebuild全部child widget）
 
 ## Provider
 Provider是一个常用并且理解起来比较简单的状态管理库，开发者可以创建`Provider`、`FutureProvider`、`ChangeNotifierProvider`等类型的Provider，但都会继承`InheritedProvider`，`InheritedProvider`是Provider中的核心类，用于提供数据。然后可以使用`Consumer`、`Selector`等类型的Widget，或者直接使用`Provider.of`（`Consumer`和`Selector`内部也会使用`Provider.of`）来监听Provider的数据变化，从而实现状态管理；Provider也提供了一些BuildContext上的扩展方法，可以调用`context.read()`、`context.watch()`、`context.select()`等方法来获取Provider的数据。
@@ -344,6 +373,8 @@ Provider是一个常用并且理解起来比较简单的状态管理库，开发
 `InheritedProvider`是一个自定义的`SingleChildStatelessWidget`类的子类，传入它的参数（比如create函数等）都会放到delegate中，并且会把child widget放到`_InheritedProviderScope`（`InheritedWidget`的子类）中。使用`Provider.of`获取值，就会找到`_InheritedProviderScope`对应的`_InheritedProviderScopeElement`，`_InheritedProviderScopeElement`的value就会从delegate中获取。
 
 `Provider.of`方法默认会启动监听，调用`context.dependOnInheritedWidgetOfExactType`依赖`_InheritedProviderScope`，例如使用`ChangeNotifierProvider`，持有的`ChangeNotifier`通知更新时，就会触发`_InheritedProviderScopeElement`的`markNeedsNotifyDependents()`方法调用，通过build调用`notifyClients`更新监听`ChangeNotifier`的子widget。
+
+> 如果没有使用`ChangeNotifierProvider`，而是其他类型的Provider，比如`Provider.value()`，则没有监听变化的效果。
 
 > MultiProvider继承了Nested，可以把传入的`List<SingleChildWidget>`作为嵌套的Widget，如果传入的`List<SingleChildWidget>`中的Provider有child属性，会被忽略，因为MultiProvider自身就需要设置child widget，传入给MultiProvider的Provider仅用于数据共享。
 
@@ -460,3 +491,5 @@ class CounterHomePage extends StatelessWidget {
 }
 ```
 相比上一个例子，这里使用了Consumer来监听CounterNotifier的变化，并没有抽取为`CounterDisplayWidget`，数据更新时只会重新调用Consumer的builder方法，不会重新构建整个Widget树。
+
+> `ChangeNotifierProvider`的原理和`InheritedNotifier`类似，都是通过`Listenable`结合`InheritedWidget`实现数据共享和监听。只不过`Provider`这个库提供了更多易用的API，如`Consumer`、`Selector`、`Provider.of`等，以及不需要监听的普通Provider，使得数据共享和监听更加方便和全面。
